--- a/backend/static/operations-center.html
+++ b/backend/static/operations-center.html
@@ -459,25 +459,7 @@
             onmouseover="this.style.transform='translateY(-2px)'; this.style.boxShadow='0 6px 20px rgba(16, 185, 129, 0.4)'"
             onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 4px 15px rgba(16, 185, 129, 0.3)'">
            ↩️ العودة للوحة التحكم
-         </button>
-        
-         <!-- زر إدارة الفعاليات (يفتح نفس التبويب) -->
-         <button onclick="window.location.href='/static/events-dashboard.html'"
-            style="width: 100%; margin-top: 15px; padding: 12px; background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-              border: none; border-radius: 8px; color: white; font-weight: bold; cursor: pointer;
-              font-size: 13px; transition: all 0.3s; box-shadow: 0 4px 15px rgba(102, 126, 234, 0.3);"
-            onmouseover="this.style.transform='translateY(-2px)'; this.style.boxShadow='0 6px 20px rgba(102, 126, 234, 0.4)'"
-            onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 4px 15px rgba(102, 126, 234, 0.3)'">
-           🗓️ الانتقال إلى إدارة الفعاليات
-         </button>
-
-         <!-- زر تسجيل الخروج -->
-         <button onclick="logout()"
-            style="width: 100%; margin-top: 10px; padding: 12px; background: linear-gradient(135deg, #ef4444 0%, #dc2626 100%);
-              border: none; border-radius: 8px; color: white; font-weight: bold; cursor: pointer;
-              font-size: 13px; transition: all 0.3s; box-shadow: 0 4px 15px rgba(239, 68, 68, 0.3);"
-            onmouseover="this.style.transform='translateY(-2px)'; this.style.boxShadow='0 6px 20px rgba(239, 68, 68, 0.4)'"
-            onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 4px 15px rgba(239, 68, 68, 0.3)'">
+         </button>>
            🚪 تسجيل الخروج
          </button>
       </div>
